fixed overflow scroll aside

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,13 @@ html {
   overflow-x: hidden;
 }
 
-body {
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
+
+.page {
   margin: 0;
   background: $c-gray;
   max-width: $page-max-width;
@@ -370,7 +376,7 @@ a {
 .aside {
   @include set-size(100vw, 100vh);
 
-  overflow: scroll;
+  overflow: auto;
   max-width: $page-max-width;
   background-color: $c-grey-blue;
   position: fixed;
